containers/salad/root/opt/manifests/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: salad
  namespace: salad
  labels:
    app: salad
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: salad
