containers/salad/root/opt/manifests/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: selfsigned
    kubernetes.io/tls-acme: "true"
  name: salad
  namespace: salad
spec:
  rules:
  - host: echo.localhost
    http:
      paths:
      - backend:
          service:
            name: salad
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - echo.localhost
    secretName: echo-localhost-tls
